# OnedriveHostsGenerator

./: .gitignore  .vercelignore  Cargo.toml  LICENSE  README.md  build.rs  dns.cache  dns_get.php  domains.txt  index.php  list.php  time.pid  txt.php  vercel.json
.github/: dependabot.yml
.github/workflows/: test.yml
api/: handler.rs  index.php
bak/: txt.php
src/: lib.rs  utils.rs
