[package]
name = "onedrive_hosts_generator"
version = "0.2.0"
edition = "2021"
build = "build.rs"

[dependencies]
chrono = "0.4.38"
chrono-tz = "0.9.0"
once_cell = "1.19.0"
tokio = { version = "1", features = ["macros"] }
url = "2.5.0"
vercel_runtime = "1.1.3"
hickory-resolver = { version = "0.24.1", features = ["dns-over-https-rustls", "webpki-roots"] }

[build-dependencies]
quote = "1.0.36"
proc-macro2 = "1.0.83"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5"

[[bin]]
name = "handler"
path = "api/handler.rs"

[lib]
path = "src/lib.rs"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
