[package]
name = "onedrive_hosts_generator"
version = "0.2.0"
edition = "2021"
build = "build.rs"

[dependencies]
chrono = "0.4.39"
chrono-tz = "0.10.0"
once_cell = "1.20.2"
tokio = { version = "1", features = ["macros"] }
url = "2.5.4"
vercel_runtime = "1.1.4"
hickory-resolver = { version = "0.24.1", features = ["dns-over-https-rustls", "webpki-roots"] }

[build-dependencies]
quote = "1.0.37"
proc-macro2 = "1.0.92"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"

[[bin]]
name = "handler"
path = "api/handler.rs"

[lib]
path = "src/lib.rs"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
