[package]
name = "onedrive_hosts_generator"
version = "0.2.0"
edition = "2021"
build = "build.rs"

[dependencies]
chrono = "0.4.42"
chrono-tz = "0.10.4"
once_cell = "1.21.3"
tokio = { version = "1", features = ["macros"] }
url = "2.5.7"
vercel_runtime = "1.1.6"
hickory-resolver = { version = "0.24.4", features = ["dns-over-https-rustls", "webpki-roots"] }

[build-dependencies]
quote = "1.0.41"
proc-macro2 = "1.0.95"

[[bin]]
name = "handler"
path = "api/handler.rs"

[lib]
path = "src/lib.rs"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
